--- a/css/header.css
+++ b/css/header.css
@@ -141,9 +141,8 @@
 /* MENU WIDGET AREA */
 
 .menu_bottom_area {
-  padding: 10px;
+  padding: 20px 10px 32px 10px;
   font-size: 14px;
-  color: var(--theme_menu_text_color);
   border-top: 1px solid var(--theme_menu_text_color);
 }
 
@@ -151,6 +150,14 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+
+.menu_bottom_area .menu_widget_area h2,
+.menu_bottom_area .menu_widget_area h3,
+.menu_bottom_area .menu_widget_area h4,
+.menu_bottom_area .menu_widget_area p,
+.menu_bottom_area .menu_widget_area a {
+  color: var(--theme_menu_text_color);
 }
 
 /* MENU OPEN CLASS */
