--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ a img.aligncenter {
   border: 0;
   clip: rect(1px, 1px, 1px, 1px);
   -webkit-clip-path: inset(50%);
-          clip-path: inset(50%);
+  clip-path: inset(50%);
   height: 1px;
   margin: -1px;
   overflow: hidden;
@@ -113,7 +113,7 @@ a img.aligncenter {
   background-color: #eee;
   clip: auto !important;
   -webkit-clip-path: none;
-          clip-path: none;
+  clip-path: none;
   color: #444;
   display: block;
   font-size: 1em;
@@ -134,8 +134,8 @@ a img.aligncenter {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   gap: 10px !important;
 }
 
@@ -143,7 +143,7 @@ a img.aligncenter {
   padding: 0;
   margin: 0 !important;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-family: "Helvetica Neue", Arial, sans-serif;
   list-style-type: none;
 }
@@ -185,8 +185,8 @@ img {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   width: 100%;
   min-height: 100%;
   --theme_main_column_width: 1024px;
@@ -215,7 +215,7 @@ img {
   z-index: -100;
   background-color: var(--theme_bg_color);
   -webkit-filter: brightness(90%);
-          filter: brightness(90%);
+  filter: brightness(90%);
 }
 
 hr {
@@ -231,8 +231,8 @@ form {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   gap: 10px;
   width: 100%;
   padding: 20px;
@@ -257,8 +257,8 @@ label {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   gap: 6px;
   font-weight: bold;
 }
@@ -270,8 +270,8 @@ textarea:focus {
 
 input[type="submit"] {
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   padding: 5px;
   background-color: var(--theme_primary_color);
 }
@@ -290,7 +290,7 @@ button {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
+  flex-wrap: nowrap;
 }
 
 .theme_column {
@@ -299,16 +299,16 @@ button {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 ._svg {
   display: block;
-  margin: 0 auto;
+  margin: 0 auto !important;
   width: var(--svg_size);
   height: var(--svg_size);
   color: var(--theme_primary_color);
